# mlbcal

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
mlbcal/: __init__.py  main.py  tests.py
mlbcal/data/: teams.json
mlbcal/lookup/: teams.json
mlbcal/utils/: create_lookup.py  download_teams.py  load.py
tests/: test_data.py  test_main.py
