[metadata]
name = mlbcal
version = 0.0.1
author = Mike Yu
author_email = mike@mike-yu.com
description = Download MLB game calendar for a given team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joeeoj/mlbcal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mlbcal
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mlbcal

[options.entry_points]
console_scripts =
    mlbcal = mlbcal:cli
