[metadata]
name = mlbcal
version = 0.0.3
author = Mike Yu
author_email = mike@mike-yu.com
description = Download MLB game calendar for a given team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joeeoj/mlbcal
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    mlbcal = mlbcal.main:main
